Refactor MainActivity and WebAppBridge for improved HTML loading and error handling, update build.gradle for asset directory adjustments, and enhance HttpUtil for better byte reading